Resources/public/less/console.less
body {
	padding-top: 60px;
	background-color: #EDEDED;
    color: #555555;
}
form.actions-delete {
	display: inline-block;
    margin: 0 0 0 3px;
    position: absolute;
}
form label {
	font-weight: bold;
	color: #3f3f3f;
}
	form div.collection.controls .control-group {
		margin-bottom: 5px;
	}
	form div.collection.controls .control-group .controls label {
		display: inline-block;
	}
	div.collection.controls div.collection-item {
		padding: 1%;
		border: 1px solid #d0d0d0;
		margin-bottom: 1%;
	}

	div.collection-item .action-container {
		float: right;
		width: auto;
	}
		div.collection-item .action-container .btn {
			margin-left: 5px;
			top: 0;
		}

	div.collection.controls div.collection-item.staged label {
		color: #D4D4D4;
	}

/* List Page
   -------------*/
div.content div.row {
	margin: 18px 0;
}
	div.content div.row h1{
		padding: 0 0 20px 0;
	}

div.content div.row table.table {
	background: #F3F3F3;
    border: 1px solid #DDDDDD;	
}

.records_list .actions {
	width: 120px;
}
.records_list .title {
	width: 60%;
}

